modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/IdentifierMissingMainFunc.bal
package samples.parser.invalidSyntax;

function main(string[] i) {
	// Following line is invalid.
	b;
	reply m;
}
